--- a/package.json
+++ b/package.json
@@ -17,14 +17,22 @@
   },
   "homepage": "https://github.com/abishekdevendran/GitWrapper#readme",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.19",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.13",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@octokit/auth-oauth-user": "^2.0.4",
+    "@octokit/core": "^4.1.0",
+    "connect-redis": "^6.1.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "redis": "^4.5.1"
   }
 }
