--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A wrapper over GitHub API to automate some tasks",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,6 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@octokit/auth-oauth-user": "^2.0.4",
-    "@octokit/core": "^4.1.0",
     "connect-redis": "^6.1.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
