--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "node-fetch": "^3.3.0",
     "redis": "^4.5.1"
   }
 }
