--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "express-session": "^1.17.3",
     "node-fetch": "^3.3.0",
     "redis": "^4.5.1"
+  },
+  "engines": {
+    "node": ">=17.0.0",
+    "npm": ">=8.0.0"
   }
 }
